# so_long

./: .gitignore  CMakeLists.txt  Makefile  README.md  so_long  test.c
img/: test.xpm
inc/: get_next_line.h  so_long.h
maps/: map0.ber  no_valid.ber
practice/: hooks.c  images.c  test.c  w_event.c
src/: draw_map.c  get_next_line_utils.c  map.c  map2.c  movements.c  so_long.c
